# rustbootcamp

4. Projects/1. CLI/Problem/Stage 1/Step  1/src/: models.rs
4. Projects/1. CLI/Problem/Stage 1/Step 2/src/: db.rs  models.rs
4. Projects/1. CLI/Problem/Stage 1/Step 3/src/: db.rs  models.rs
4. Projects/1. CLI/Problem/Stage 2/Step 1/src/: models.rs
4. Projects/1. CLI/Problem/Stage 2/Step 1/src/ui/pages/: mod.rs  page_helpers.rs
4. Projects/1. CLI/Problem/Stage 2/Step 2/src/ui/: prompts.rs
4. Projects/1. CLI/Problem/Stage 3/Step 1/src/: navigator.rs
4. Projects/1. CLI/Problem/Stage 3/Step 2/data/: db.json
4. Projects/1. CLI/Problem/Stage 3/Step 2/src/: main.rs
4. Projects/1. CLI/Solution/data/: db.json
4. Projects/1. CLI/Solution/src/: main.rs
4. Projects/2. API-axum/Problem/Stage 1/: README.md
4. Projects/2. API-axum/Problem/Stage 1/Step 1 & 2/: Cargo.toml
4. Projects/2. API-axum/Problem/Stage 1/Step 1 & 2/src/: models.rs
4. Projects/2. API-axum/Problem/Stage 1/Step 1 & 2/src/handlers/: mod.rs
4. Projects/2. API-axum/Problem/Stage 2/Step 1/: Cargo.toml
4. Projects/2. API-axum/Problem/Stage 2/Step 1/src/: main.rs
4. Projects/2. API-axum/Problem/Stage 2/Step 2/: Cargo.toml
4. Projects/2. API-axum/Problem/Stage 2/Step 2/src/persistance/: answers_dao.rs  questions_dao.rs
4. Projects/2. API-axum/Problem/Stage 3/Step 1/src/handlers/: handlers_inner.rs
4. Projects/2. API-axum/Problem/Stage 3/Step 2/src/: main.rs
4. Projects/2. API-axum/Problem/Stage 3/Step 3/src/handlers/: handlers_inner.rs  mod.rs
