[package]
name = "stackoverflow-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
axum = "0.6.20"
sqlx = { version = "0.7.2", features = [ "runtime-tokio-rustls" , "postgres", "time", "uuid"] }
dotenvy = "0.15"
log = "0.4"
pretty_env_logger = "0.5"
async-trait = "0.1"
thiserror = "1.0"
chrono = "0.4.35"
uuid = {version = "1.7.0", features = [    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics",]}
time = "0.3.34"